--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
 	"author": "The WordPress Contributors",
 	"license": "GPL-2.0-or-later",
 	"main": "build/index.js",
-	"files": ["build", "*.php"],
+	"files": [
+		"build",
+		"*.php"
+	],
 	"scripts": {
 		"build": "wp-scripts build --webpack-copy-php",
 		"format": "wp-scripts format",
@@ -21,7 +24,9 @@
 		"@wordpress/scripts": "^27.3.0"
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-free": "^6.5.1",
 		"@wordpress/block-editor": "^12.20.0",
+		"@wordpress/server-side-render": "^4.29.0",
 		"react": "^18.2.0"
 	}
 }
